--- a/Bitcoin_WPF/MainWindow.xaml
+++ b/Bitcoin_WPF/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="Bitcoin_WPF.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="427.325" Width="792.586">
+        Title="BitcoinLib WPF app" Height="427.325" Width="792.586">
     <Grid>
         <Label Content="Wallet GUID" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="3,0,0,0" Height="26" Width="75"/>
         <TextBox x:Name="tbGUID" HorizontalAlignment="Left" TextWrapping="Wrap" Width="302" Margin="10,26,0,0" Height="23" VerticalAlignment="Top" TabIndex="1"/>
@@ -11,7 +11,7 @@
         <Label Content="API Code" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="547,0,0,0" Height="26" Width="59"/>
         <PasswordBox x:Name="tbPassword" HorizontalAlignment="Left" Margin="317,26,0,0" VerticalAlignment="Top" Width="145" Height="23" TabIndex="2"/>
         <TextBox x:Name="tb2Password" HorizontalAlignment="Left" Margin="467,26,-37,0" VerticalAlignment="Top" Width="75" Height="23" TabIndex="3"/>
-        <TextBox x:Name="tbMemo" Margin="10,142,10,10" ScrollViewer.HorizontalScrollBarVisibility="Visible" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" IsReadOnly="True">
+        <TextBox x:Name="tbMemo" Margin="10,142,10,10" ScrollViewer.HorizontalScrollBarVisibility="Visible" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" IsReadOnly="True" FontFamily="Courier New">
             <TextBox.Background>
                 <LinearGradientBrush EndPoint="0.5,1" MappingMode="RelativeToBoundingBox" StartPoint="0.5,0">
                     <GradientStop Color="#FFF3F3F3"/>
@@ -20,5 +20,6 @@
             </TextBox.Background>
         </TextBox>
         <Button x:Name="tbnWalletAddr" Content="Check Wallet Address" HorizontalAlignment="Left" Margin="10,63,0,0" VerticalAlignment="Top" Width="130" Height="31" Click="tbnWalletAddr_Click" TabIndex="5"/>
+        <Button x:Name="btnTicker" Content="Get Tickers" HorizontalAlignment="Left" Margin="145,63,0,0" VerticalAlignment="Top" Width="112" Height="31" Click="btnTicker_Click"/>
     </Grid>
 </Window>
