--- a/Bitcoin_WPF/MainWindow.xaml
+++ b/Bitcoin_WPF/MainWindow.xaml
@@ -1,17 +1,20 @@
 ﻿<Window x:Class="Bitcoin_WPF.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="BitcoinLib WPF app" Height="427.325" Width="792.586">
+        Title="BitcoinLib &amp; Blockchain - Test" Height="522.325" Width="792.586">
     <Grid>
-        <Label Content="Wallet GUID" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="3,0,0,0" Height="26" Width="75"/>
-        <TextBox x:Name="tbGUID" HorizontalAlignment="Left" TextWrapping="Wrap" Width="302" Margin="10,26,0,0" Height="23" VerticalAlignment="Top" TabIndex="1"/>
-        <Label Content="Password" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="317,0,0,0" Height="26" Width="60"/>
-        <Label Content="2º Password" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="467,0,-37,0" Height="26" Width="75"/>
-        <TextBox x:Name="tbApiCode" HorizontalAlignment="Left" TextWrapping="Wrap" Width="75" Margin="547,26,0,0" Height="23" VerticalAlignment="Top" TabIndex="4"/>
-        <Label Content="API Code" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="547,0,0,0" Height="26" Width="59"/>
-        <PasswordBox x:Name="tbPassword" HorizontalAlignment="Left" Margin="317,26,0,0" VerticalAlignment="Top" Width="145" Height="23" TabIndex="2"/>
-        <TextBox x:Name="tb2Password" HorizontalAlignment="Left" Margin="467,26,-37,0" VerticalAlignment="Top" Width="75" Height="23" TabIndex="3"/>
-        <TextBox x:Name="tbMemo" Margin="10,142,10,10" ScrollViewer.HorizontalScrollBarVisibility="Visible" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" IsReadOnly="True" FontFamily="Courier New">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        <Label Content="Wallet GUID" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,28,0,0" Height="26" Width="75"/>
+        <TextBox x:Name="tbGUID" HorizontalAlignment="Left" TextWrapping="Wrap" Width="327" Margin="10,54,0,0" Height="23" VerticalAlignment="Top" TabIndex="1" VerticalContentAlignment="Center"/>
+        <Label Content="Password" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="342,28,0,0" Height="26" Width="60"/>
+        <Label Content="2º Password" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="492,28,0,0" Height="26" Width="75"/>
+        <TextBox x:Name="tbApiCode" HorizontalAlignment="Left" TextWrapping="Wrap" Width="75" Margin="593,54,0,0" Height="23" VerticalAlignment="Top" TabIndex="4" VerticalContentAlignment="Center"/>
+        <Label Content="API Code" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="593,28,0,0" Height="26" Width="59"/>
+        <PasswordBox x:Name="tbPassword" HorizontalAlignment="Left" Margin="342,54,0,0" VerticalAlignment="Top" Width="145" Height="23" TabIndex="2" VerticalContentAlignment="Center"/>
+        <PasswordBox x:Name="tb2Password" HorizontalAlignment="Left" Margin="492,54,0,0" VerticalAlignment="Top" Width="96" Height="23" TabIndex="3" VerticalContentAlignment="Center"/>
+        <TextBox x:Name="tbMemo" Margin="10,256,10,10" ScrollViewer.HorizontalScrollBarVisibility="Visible" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" IsReadOnly="True" FontFamily="Courier New">
             <TextBox.Background>
                 <LinearGradientBrush EndPoint="0.5,1" MappingMode="RelativeToBoundingBox" StartPoint="0.5,0">
                     <GradientStop Color="#FFF3F3F3"/>
@@ -19,7 +22,47 @@
                 </LinearGradientBrush>
             </TextBox.Background>
         </TextBox>
-        <Button x:Name="tbnWalletAddr" Content="Check Wallet Address" HorizontalAlignment="Left" Margin="10,63,0,0" VerticalAlignment="Top" Width="130" Height="31" Click="tbnWalletAddr_Click" TabIndex="5"/>
-        <Button x:Name="btnTicker" Content="Get Tickers" HorizontalAlignment="Left" Margin="145,63,0,0" VerticalAlignment="Top" Width="112" Height="31" Click="btnTicker_Click"/>
+        <Label x:Name="label" Content="All transactions are sent in HTTPS protocol" VerticalAlignment="Top" FontWeight="Bold" Background="#FFEC7E7E" HorizontalContentAlignment="Center" Height="26" FontSize="14.667"/>
+        <TabControl x:Name="tabControl" Height="169" Margin="10,82,10,0" VerticalAlignment="Top">
+            <TabItem Header="Wallet Management" Margin="-2,-2,-17,-2">
+                <TabItem.Background>
+                    <LinearGradientBrush EndPoint="0,1" StartPoint="0,0">
+                        <GradientStop Color="#FFF0F0F0" Offset="0"/>
+                        <GradientStop Color="#FFA8F39C" Offset="1"/>
+                    </LinearGradientBrush>
+                </TabItem.Background>
+                <Grid Background="#FFE5E5E5" Margin="0,0,0,0">
+                    <Button x:Name="tbnWalletAddr" Content="Get Wallet Address" HorizontalAlignment="Left" Margin="2,53,0,0" VerticalAlignment="Top" Width="114" Height="27" Click="tbnWalletAddr_Click" TabIndex="5"/>
+                    <Button x:Name="btnTicker" Content="Get Tickers" HorizontalAlignment="Left" Margin="2,21,0,0" VerticalAlignment="Top" Width="114" Height="27" Click="btnTicker_Click"/>
+                    <Button x:Name="tbnWalletBallance" Content="Wallet Ballance" HorizontalAlignment="Left" Margin="2,85,0,0" VerticalAlignment="Top" Width="114" Height="27" TabIndex="5" Click="tbnWalletBallance_Click"/>
+                    <GroupBox x:Name="groupBox" Header="Inform wallet address" Height="91" VerticalAlignment="Top" Margin="205,21,0,0" HorizontalAlignment="Left" Width="419">
+                        <Grid Margin="0,0,-2,-12">
+                            <Button x:Name="btnWalletBallance" Content="Address Ballance" HorizontalAlignment="Left" VerticalAlignment="Top" Width="97" Height="27" TabIndex="5" Margin="2,10,0,0" Click="btnAddressBallance_Click"/>
+                            <TextBox x:Name="tbAddress" Height="23" Margin="2,46,3,0" TextWrapping="Wrap" VerticalAlignment="Top" VerticalContentAlignment="Center"/>
+                            <Button x:Name="btnNewAddress" Content="New Address" HorizontalAlignment="Left" VerticalAlignment="Top" Width="86" Height="27" TabIndex="5" Margin="120,10,0,0" Click="btnNewAddress_Click"/>
+                            <Button x:Name="btnArchive" Content="Archive" HorizontalAlignment="Left" Margin="230,10,0,0" VerticalAlignment="Top" Width="75" Height="27" Click="btnArchive_Click"/>
+                            <Button x:Name="btnUnArchive" Content="UnArchive" HorizontalAlignment="Left" Margin="329,10,0,0" VerticalAlignment="Top" Width="75" Height="27" Click="btnUnArchive_Click"/>
+                        </Grid>
+                    </GroupBox>
+                </Grid>
+            </TabItem>
+            <TabItem Header="Wallet Transaction" Margin="16,-2,-41,-2">
+                <TabItem.Background>
+                    <LinearGradientBrush EndPoint="0,1" StartPoint="0,0">
+                        <GradientStop Color="#FFE40000" Offset="0"/>
+                        <GradientStop Color="White" Offset="1"/>
+                    </LinearGradientBrush>
+                </TabItem.Background>
+                <Grid Background="#FFE5E5E5" Margin="0,0,0,0">
+                    <Label x:Name="label_Copy" Content="CAUTION - Its a real transaction" VerticalAlignment="Top" FontWeight="Bold" Background="#FFF7C8C8" HorizontalContentAlignment="Center" Height="26" FontSize="13.333" Margin="0,0,-26,0"/>
+                    <Label x:Name="label1" Content="To Address:" HorizontalAlignment="Left" Margin="10,30,0,0" VerticalAlignment="Top"/>
+                    <TextBox x:Name="textBox" HorizontalAlignment="Left" Height="23" Margin="86,34,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="286"/>
+                    <Label x:Name="label1_Copy" Content="To Address:" HorizontalAlignment="Left" Margin="10,86,0,0" VerticalAlignment="Top"/>
+                    <TextBox x:Name="textBox_Copy" HorizontalAlignment="Left" Height="23" Margin="86,90,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="286"/>
+                    <Label x:Name="label1_Copy1" Content="Amount:" HorizontalAlignment="Left" Margin="10,58,0,0" VerticalAlignment="Top"/>
+                    <TextBox x:Name="textBox_Copy1" HorizontalAlignment="Left" Height="23" Margin="86,62,0,0" TextWrapping="Wrap" Text="0.00050000" VerticalAlignment="Top" Width="77"/>
+                </Grid>
+            </TabItem>
+        </TabControl>
     </Grid>
 </Window>
