--- a/Bitcoin_WPF/MainWindow.xaml
+++ b/Bitcoin_WPF/MainWindow.xaml
@@ -32,17 +32,17 @@
                     </LinearGradientBrush>
                 </TabItem.Background>
                 <Grid Background="#FFE5E5E5" Margin="0,0,0,0">
-                    <Button x:Name="tbnWalletAddr" Content="Get Wallet Address" HorizontalAlignment="Left" Margin="10,48,0,0" VerticalAlignment="Top" Width="132" Height="27" Click="tbnWalletAddr_Click" TabIndex="5"/>
-                    <Button x:Name="btnTicker" Content="Get Tickers" HorizontalAlignment="Left" Margin="10,11,0,0" VerticalAlignment="Top" Width="132" Height="27" Click="btnTicker_Click"/>
-                    <Button x:Name="tbnWalletBallance" Content="Wallet Ballance" HorizontalAlignment="Left" Margin="10,85,0,0" VerticalAlignment="Top" Width="132" Height="27" TabIndex="5" Click="tbnWalletBallance_Click"/>
-                    <GroupBox x:Name="groupBox" Header="Wallet address check" Height="112" VerticalAlignment="Top" Margin="165,0,10,0">
+                    <Button x:Name="tbnWalletAddr" Content="Get Wallet Address" HorizontalAlignment="Left" Margin="10,48,0,0" VerticalAlignment="Top" Width="132" Height="27" Click="tbnWalletAddr_Click" TabIndex="2"/>
+                    <Button x:Name="btnTicker" Content="Get Tickers" HorizontalAlignment="Left" Margin="10,11,0,0" VerticalAlignment="Top" Width="132" Height="27" Click="btnTicker_Click" TabIndex="1"/>
+                    <Button x:Name="tbnWalletBallance" Content="Wallet Ballance" HorizontalAlignment="Left" Margin="10,85,0,0" VerticalAlignment="Top" Width="132" Height="27" TabIndex="3" Click="tbnWalletBallance_Click"/>
+                    <GroupBox x:Name="groupBox" Header="Wallet address check" Height="112" VerticalAlignment="Top" Margin="165,0,10,0" TabIndex="4">
                         <Grid Margin="0,0,-1,-10">
-                            <Button x:Name="btnWalletBallance" Content="Address Ballance" HorizontalAlignment="Left" VerticalAlignment="Top" Width="129" Height="27" TabIndex="5" Margin="10,5,0,0" Click="btnAddressBallance_Click" HorizontalContentAlignment="Center"/>
-                            <TextBox x:Name="tbAddress" Height="23" Margin="10,63,0,0" TextWrapping="Wrap" VerticalAlignment="Top" VerticalContentAlignment="Center" HorizontalAlignment="Left" Width="550"/>
-                            <Button x:Name="btnNewAddress" Content="New Address" HorizontalAlignment="Left" VerticalAlignment="Top" Width="129" Height="27" TabIndex="5" Margin="159,5,0,0" Click="btnNewAddress_Click" HorizontalContentAlignment="Center"/>
-                            <Button x:Name="btnArchive" Content="Archive" HorizontalAlignment="Left" Margin="354,5,0,0" VerticalAlignment="Top" Width="100" Height="27" Click="btnArchive_Click" HorizontalContentAlignment="Center"/>
-                            <Button x:Name="btnUnArchive" Content="UnArchive" HorizontalAlignment="Left" Margin="459,5,0,0" VerticalAlignment="Top" Width="101" Height="27" Click="btnUnArchive_Click" HorizontalContentAlignment="Center"/>
-                            <Label x:Name="label2" Content="Put one of yours wallet address" HorizontalAlignment="Left" Margin="10,37,0,0" VerticalAlignment="Top"/>
+                            <Button x:Name="btnWalletBallance" Content="Address Ballance" HorizontalAlignment="Left" Width="129" TabIndex="12" Margin="10,59,0,14" Click="btnAddressBallance_Click" HorizontalContentAlignment="Center"/>
+                            <TextBox x:Name="tbAddress" Height="23" Margin="10,31,0,0" TextWrapping="Wrap" VerticalAlignment="Top" VerticalContentAlignment="Center" HorizontalAlignment="Left" Width="550" TabIndex="11"/>
+                            <Button x:Name="btnNewAddress" Content="New Address" HorizontalAlignment="Left" VerticalAlignment="Top" Width="129" Height="27" TabIndex="13" Margin="144,59,0,0" Click="btnNewAddress_Click" HorizontalContentAlignment="Center"/>
+                            <Button x:Name="btnArchive" Content="Archive" HorizontalAlignment="Left" Margin="399,59,0,0" VerticalAlignment="Top" Width="78" Height="27" Click="btnArchive_Click" HorizontalContentAlignment="Center" TabIndex="14"/>
+                            <Button x:Name="btnUnArchive" Content="UnArchive" HorizontalAlignment="Left" Margin="481,59,0,0" VerticalAlignment="Top" Width="79" Height="27" Click="btnUnArchive_Click" HorizontalContentAlignment="Center" TabIndex="15"/>
+                            <Label x:Name="label2" Content="Put one of yours wallet address" HorizontalAlignment="Left" Margin="10,5,0,0" VerticalAlignment="Top"/>
                         </Grid>
                     </GroupBox>
                 </Grid>
@@ -56,12 +56,19 @@
                 </TabItem.Background>
                 <Grid Background="#FFE5E5E5">
                     <Label x:Name="label3" Content="Set receive address" HorizontalAlignment="Left" VerticalAlignment="Top" VerticalContentAlignment="Center" Margin="0,10,0,0"/>
-                    <TextBox x:Name="tbReceiveAdr" TextWrapping="Wrap" Margin="116,13,296,80" VerticalContentAlignment="Center"/>
-                    <TextBox x:Name="tbReceiveInput" Height="35" TextWrapping="Wrap" VerticalAlignment="Top" Margin="116,41,141,0" FontSize="16" VerticalContentAlignment="Center" FontWeight="Bold" IsReadOnly="True"/>
-                    <Label x:Name="label3_Copy" Content="Input Receive" HorizontalAlignment="Left" VerticalAlignment="Top" VerticalContentAlignment="Center" Margin="0,50,0,0"/>
-                    <TextBox x:Name="tbCallbackUrl" Height="35" TextWrapping="Wrap" VerticalAlignment="Top" Margin="116,81,141,0" FontSize="13.333" VerticalContentAlignment="Center" FontWeight="Bold"/>
-                    <Label x:Name="label3_Copy1" Content="CallBack URL" HorizontalAlignment="Left" VerticalAlignment="Top" VerticalContentAlignment="Center" Margin="0,90,0,0"/>
-                    <Button x:Name="btnReceive" Content="Receive Bitcoins" HorizontalAlignment="Right" Margin="0,13,141,0" VerticalAlignment="Top" Width="150" Height="23" Click="btnReceive_Click" VerticalContentAlignment="Top"/>
+                    <TextBox x:Name="tbReceiveAdr" TextWrapping="Wrap" Margin="116,13,214,80" VerticalContentAlignment="Center" TabIndex="1"/>
+                    <TextBox x:Name="tbReceiveInput" Height="35" TextWrapping="Wrap" VerticalAlignment="Top" Margin="116,81,141,0" FontSize="16" VerticalContentAlignment="Center" FontWeight="Bold" IsReadOnly="True" TabIndex="4"/>
+                    <Label x:Name="label3_Copy" Content="Input Receive" HorizontalAlignment="Left" VerticalAlignment="Top" VerticalContentAlignment="Center" Margin="0,90,0,0"/>
+                    <TextBox x:Name="tbCallbackUrl" Height="25" TextWrapping="Wrap" VerticalAlignment="Top" Margin="116,40,214,0" FontSize="13.333" VerticalContentAlignment="Center" FontWeight="Bold" TabIndex="2"/>
+                    <Label x:Name="label3_Copy1" Content="CallBack URL" HorizontalAlignment="Left" VerticalAlignment="Top" VerticalContentAlignment="Center" Margin="10,39,0,0"/>
+                    <Button x:Name="btnReceive" Content="Receive&#xD;&#xA;Bitcoins" HorizontalAlignment="Right" Margin="0,13,141,0" VerticalAlignment="Top" Width="68" Height="52" Click="btnReceive_Click" VerticalContentAlignment="Top" TabIndex="3" FontWeight="Bold">
+                        <Button.Background>
+                            <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                                <GradientStop Color="#FFC8F5BD"/>
+                                <GradientStop Color="#FF3CC54E" Offset="1"/>
+                            </LinearGradientBrush>
+                        </Button.Background>
+                    </Button>
                     <Image x:Name="imgQRrec" Height="116" VerticalAlignment="Top" HorizontalAlignment="Right" Width="136"/>
                 </Grid>
             </TabItem>
@@ -75,16 +82,16 @@
                 <Grid Background="#FFE5E5E5" Margin="0,0,0,0">
                     <Label x:Name="label_Copy" Content="CAUTION - Its a real transaction" VerticalAlignment="Top" FontWeight="Bold" Background="#FFF7C8C8" HorizontalContentAlignment="Center" Height="26"/>
                     <Label x:Name="label1" Content="Sender Addr" HorizontalAlignment="Left" Margin="10,31,0,0" VerticalAlignment="Top"/>
-                    <TextBox x:Name="tbSendAdr" HorizontalAlignment="Left" Height="23" Margin="86,31,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="286"/>
+                    <TextBox x:Name="tbSendAdr" HorizontalAlignment="Left" Height="23" Margin="86,31,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="286" TabIndex="1"/>
                     <Label x:Name="label1_Copy" Content="Receive Addr" HorizontalAlignment="Left" Margin="384,31,0,0" VerticalAlignment="Top"/>
-                    <TextBox x:Name="tbFromAdr" HorizontalAlignment="Left" Height="23" Margin="463,31,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="280" Text="(optional)"/>
+                    <TextBox x:Name="tbFromAdr" HorizontalAlignment="Left" Height="23" Margin="463,31,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="280" Text="(optional)" TabIndex="2"/>
                     <Label x:Name="label1_Copy1" Content="Amount:" HorizontalAlignment="Left" Margin="10,59,0,0" VerticalAlignment="Top"/>
-                    <TextBox x:Name="tbAmount" HorizontalAlignment="Left" Height="23" Margin="86,59,0,0" TextWrapping="Wrap" Text="0.00000000" VerticalAlignment="Top" Width="77"/>
+                    <TextBox x:Name="tbAmount" HorizontalAlignment="Left" Height="23" Margin="86,59,0,0" TextWrapping="Wrap" Text="0.00000000" VerticalAlignment="Top" Width="77" TabIndex="3"/>
                     <Label x:Name="label1_Copy2" Content="Fee:" HorizontalAlignment="Left" Margin="257,59,0,0" VerticalAlignment="Top"/>
-                    <TextBox x:Name="tbFee" HorizontalAlignment="Left" Height="23" Margin="293,59,0,0" TextWrapping="Wrap" Text="(optional)" VerticalAlignment="Top" Width="79"/>
+                    <TextBox x:Name="tbFee" HorizontalAlignment="Left" Height="23" Margin="293,59,0,0" TextWrapping="Wrap" Text="(optional)" VerticalAlignment="Top" Width="79" TabIndex="4"/>
                     <Label x:Name="label1_Copy3" Content="Message:" HorizontalAlignment="Left" Margin="10,85,0,0" VerticalAlignment="Top"/>
-                    <TextBox x:Name="tbMessage" HorizontalAlignment="Left" Height="23" Margin="86,87,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="286" Text="(optional)"/>
-                    <Button x:Name="btnSendBitcoin" HorizontalAlignment="Left" Margin="463,65,0,0" VerticalAlignment="Top" Width="280" Height="41" Foreground="#FFAC1818" FontWeight="Bold" BorderBrush="Red" UseLayoutRounding="False" Background="#FFFDD9D9" Click="btnSendBitcoin_Click" Content="Send Bitcoins"/>
+                    <TextBox x:Name="tbMessage" HorizontalAlignment="Left" Height="23" Margin="86,87,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="286" Text="(optional)" TabIndex="5"/>
+                    <Button x:Name="btnSendBitcoin" HorizontalAlignment="Left" Margin="463,65,0,0" VerticalAlignment="Top" Width="280" Height="41" Foreground="#FFAC1818" FontWeight="Bold" BorderBrush="Red" UseLayoutRounding="False" Background="#FFFDD9D9" Click="btnSendBitcoin_Click" Content="Send Bitcoins" TabIndex="6"/>
                 </Grid>
             </TabItem>
         </TabControl>
